--- a/style.css
+++ b/style.css
@@ -1,56 +1,56 @@
 * {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-	height: 100vh;
-	display: flex;
-	background-color: rgb(50, 190, 190);
+  display: flex;
+  height: 100vh;
+  background-color: rgb(50, 190, 190);
 }
 
 .memory-game {
-	height: 640px;
-	width: 640px;
-	margin: auto;
-	display: flex;
-	flex-wrap: wrap;
-	perspective: 1000px;
+  display: flex;
+  height: 640px;
+  width: 640px;
+  flex-wrap: wrap;
+  perspective: 1000px;
+  margin: auto;
 }
 
 .card {
-	height: calc(33.333% - 10px);
-	width: calc(25% - 10px);
-	margin: 5px;
-	position: relative;
-	box-shadow: 1px 1px 1px rgba(1, 1, 1, .3);
-	cursor: pointer;
-	transform: scale(1);
-	transform-style: preserve-3d;
-	transition: transform .9s;
+  position: relative;
+  transform: scale(1);
+  transform-style: preserve-3d;
+  transition: transform 0.9s;
+  height: calc(33.333% - 10px);
+  width: calc(25% - 10px);
+  cursor: pointer;
+  box-shadow: 1px 1px 1px rgba(1, 1, 1, 0.3);
+  margin: 5px;
 }
 
 .card:active {
-	transform: scale(0.97);
-	transition: transform .3s;
+  transform: scale(0.97);
+  transition: transform 0.3s;
 }
 
 .card-front,
 .card-back {
-	width: 100%;
-	height: 100%;
-	padding: 20px;
-	position: absolute;
-	border-radius: 5px;
-	background: rgb(255, 255, 255);
-	backface-visibility: hidden;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: rgb(255, 255, 255);
+  backface-visibility: hidden;
+  border-radius: 5px;
+  padding: 20px;
 }
 
 .card-front {
-	transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .card.flip {
-	transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
